--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -10,8 +10,8 @@
             <th>Sąskaita</th>
             <th>Pastaba</th>
             <th class="text-end">Suma</th>
-            <th width="35rem" class="no-right-border"></th>
-            <th width="35rem" class="no-left-border"></th>
+            <th class="no-right-border"></th>
+            <th class="no-left-border"></th>
         </tr>
     </thead>
     <tbody>
@@ -26,10 +26,10 @@
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
             <td>{{ item.price|intcomma }}</td>
-            <td class="no-right-border">
+            <td class="w-edit no-right-border">
                 <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
             </td>
-            <td class="text-center no-left-border">
+            <td class="w-delete no-left-border">
                 <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
