--- a/project/pensions/templates/pensions/includes/pensions_list.html
+++ b/project/pensions/templates/pensions/includes/pensions_list.html
@@ -9,8 +9,8 @@
             <th>Pastaba</th>
             <th class="text-end">Suma</th>
             <th class="text-end">Mokestis</th>
-            <th width="35rem" class="no-right-border"></th>
-            <th width="35rem" class="no-left-border"></th>
+            <th class="no-right-border"></th>
+            <th class="no-left-border"></th>
         </tr>
     </thead>
     <tbody>
@@ -23,10 +23,10 @@
             <td class="text-start">{{ item.remark }}</td>
             <td>{{ item.price|default_if_none:'-'|intcomma }}</td>
             <td>{{ item.fee|default_if_none:'-'|intcomma }}</td>
-            <td class="text-center no-right-border">
+            <td class="w-edit no-right-border">
                 <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
             </td>
-            <td class="text-center no-left-border">
+            <td class="w-delete no-left-border">
                 <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
