edit and delete columns th colspan=2

--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -14,8 +14,7 @@
             <th class="w16">Pastaba</th>
             <th class="text-end w5">Prisegtukas</th>
             <th class="text-end">Sąskaita</th>
-            <th class="no-right-border"></th>
-            <th class="no-left-border no-right-border"></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
