--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -10,9 +10,8 @@
             <th>Sąskaita</th>
             <th>Pastaba</th>
             <th class="text-end">Suma</th>
-            <th class="no-right-border"></th>
-            <th class="no-left-border"></th>
-        </tr>
+            <th colspan="2"></th>
+         </tr>
     </thead>
     <tbody>
         {% for item in items %}
