--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -11,8 +11,7 @@
             <th>Pastaba</th>
             <th class="text-center">Pradėta skaityti</th>
             <th class="text-center">Baigta skaityti</th>
-            <th class="no-right-border"></th>
-            <th class="no-left-border"></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
