--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -5,8 +5,7 @@
         <tr class="top">
             <th>Data</th>
             <th class="text-end">Kiekis</th>
-            <th class="no-right-border"></th>
-            <th class="no-left-border"></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
