--- a/project/pensions/templates/pensions/includes/pensions_list.html
+++ b/project/pensions/templates/pensions/includes/pensions_list.html
@@ -9,8 +9,7 @@
             <th>Pastaba</th>
             <th class="text-end">Suma</th>
             <th class="text-end">Mokestis</th>
-            <th class="no-right-border"></th>
-            <th class="no-left-border"></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
