--- a/project/savings/templates/savings/includes/savings_list.html
+++ b/project/savings/templates/savings/includes/savings_list.html
@@ -11,8 +11,7 @@
             <th>Pastaba</th>
             <th class="text-end">Suma</th>
             <th class="text-end">Mokesčiai</th>
-            <th class="no-right-border"></th>
-            <th class="no-left-border"></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
