--- a/project/transactions/templates/transactions/includes/table.html
+++ b/project/transactions/templates/transactions/includes/table.html
@@ -8,8 +8,7 @@
             <th>Į sąskaitą</th>
             <th class="text-end">Suma</th>
             {% if fees %}<th class="text-end">Mokesčiai</th>{% endif %}
-            <th class="no-right-border"></th>
-            <th class="no-left-border"></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
