--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -27,10 +27,10 @@
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{{ item.started|date:"Y-m-d" }}</td>
             <td class="text-center">{{ item.ended|date:"Y-m-d"|default_if_none:'-' }}</td>
-            <td class="w-edit no-right-border">
+            <td class="w-edit">
                 <a role="button" data-url="{{ url_update }}?tab={{ tab }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
             </td>
-            <td class="w-delete no-left-border">
+            <td class="w-delete">
                 <a role="button" data-url="{{ url_delete }}?tab={{ tab }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
