--- a/project/pensions/templates/pensions/includes/pensions_list.html
+++ b/project/pensions/templates/pensions/includes/pensions_list.html
@@ -22,10 +22,10 @@
             <td class="text-start">{{ item.remark }}</td>
             <td>{{ item.price|default_if_none:'-'|intcomma }}</td>
             <td>{{ item.fee|default_if_none:'-'|intcomma }}</td>
-            <td class="w-edit no-right-border">
+            <td class="w-edit">
                 <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
             </td>
-            <td class="w-delete no-left-border">
+            <td class="w-delete">
                 <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
