Element style not allowed as child of element div in this context.

--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -6,6 +6,12 @@
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/bullet.js"></script>
 <script src="{% static 'js/reload_stats.js' %}"></script>
+
+<style>
+    .teal {
+        background-color: #8ce7c2 !important;
+    }
+</style>
 {% endblock head %}
 
 
