Element style not allowed as child of element div in this context.

--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -6,6 +6,16 @@
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/heatmap.js"></script>
 <script src="{% static 'js/reload_stats.js' %}"></script>
+
+<style>
+    tr.bor {
+        border-top: double #ffc000;
+        border-bottom: double #ffc000;
+    }
+    #div_id_year1, #div_id_year2 {
+        margin-bottom: 0!important;
+    }
+</style>
 {% endblock head %}
 
 
