--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -18,5 +18,5 @@
         {% empty %}
         <tr><td colspan="2">Neįvestas tikslas</td></tr>
         {% endfor %}
-    </tbody>
+    </tfoot>
 </table>
