--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="col-lg-6 d-flex">
-        <div class="text-center mx-auto align-self-center"><img src="{% static 'images/drinks_info.jpg' %}" width="500px" alt="Kas yra standartinis alkoholio vienetas"></div>
+        <div class="text-center mx-auto align-self-center"><img src="{% static 'images/drinks_info.jpg' %}" width="500" alt="Kas yra standartinis alkoholio vienetas"></div>
     </div>
 </div>
 
