--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -310,6 +310,11 @@ table.stats td.w-delete {
     border-left: 0!important;
 }
 
+table.stats tr > td.exception {
+    padding-left:.4rem!important;
+    border-left: 5px solid red!important;
+}
+
 .plans-star {
     color: #e83e8c;
     padding-left: .5rem;
