--- a/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
@@ -1,7 +1,7 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
-            <th data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="<p>Nebūtinos išlaidos, kurių galima atsisakyti:<br />{% for i in not_use %}- {{ i }}<br />{% endfor %}</p>" style="border-left: 5px solid red!important;" class="text-start">{{ save_sum|floatformat:0 }}</th>
+            <th data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="<p>Nebūtinos išlaidos, kurių galima atsisakyti:<br />{% for i in not_use %}- {{ i }}<br />{% endfor %}</p>" class="text-start exception">{{ save_sum|floatformat:0 }}</th>
             <th class="text-end">€ + F</th>
             <th class="text-end">€ + F + P</th>
         </tr>
