--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -310,7 +310,7 @@ table.stats td.w-delete {
     border-left: 0!important;
 }
 
-table.stats tr > td.exception {
+table.stats tr > td.exception, table.stats tr > th.exception {
     padding-left:.4rem!important;
     border-left: 5px solid red!important;
 }
