--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -1,7 +1,21 @@
 {% extends 'base.html' %}
 
 
-{% block head %}{% endblock head %}
+{% block head %}
+
+<style>
+    /* copy plans form styles */
+    .col-form-label {
+        padding-bottom: 0!important;
+        line-height: 1!important;
+    }
+
+    .form-group {
+        margin-bottom: .35rem!important;
+    }
+</style>
+
+{% endblock head %}
 
 
 {% block content %}
