--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -27,6 +27,22 @@
     table.stats tr > td.expense-ordinary {
         padding-left:.55rem!important;
     }
+    .check-input-exception {
+        margin-top: 2rem;
+    }
+    #div_sum_prices {
+        padding-left: 0;
+        margin-left: 0;
+        text-align: right;
+    }
+    label[for=attachment-clear_id] {
+        padding-top: .25rem;
+    }
+    input.form-check-input {
+        height: 1em!important;
+        padding: 0;
+        margin-top: .35rem;
+    }
 </style>
 
 {% endblock head %}
