removed hardcoded style

--- a/project/accounts/templates/accounts/includes/accounts_list.html
+++ b/project/accounts/templates/accounts/includes/accounts_list.html
@@ -10,7 +10,7 @@
                 {% url 'accounts:accounts_update' item.id as url_update %}
                 <div class="list-group-item" data-url="{{ url_update }}">
                     {% if item.closed %}<s>{{ item.title }}</s> <i>uždaryta {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}
-                    <span style="position: absolute; top: 0.25rem; right: 5px; display: block;">
+                    <span class="edit-icon">
                         <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
                     </span>
                 </div>
