--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -43,6 +43,16 @@
         padding: 0;
         margin-top: .35rem;
     }
+    .expenses-edit-icon {
+        position: absolute;
+        top: 0;
+        right: 30px;
+        display: block;
+        z-index: 99;
+    }
+    .accordion-body .expenses-edit-icon {
+        top: .25rem;
+    }
 </style>
 
 {% endblock head %}
