--- a/project/incomes/templates/incomes/includes/incomes_type_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_type_list.html
@@ -8,7 +8,7 @@
                 {% for item in items %}
                 {% url 'incomes:incomes_type_update' item.id as url_update %}
                 <div class="list-group-item" data-url="{{ url_update }}">{{ item.title }}
-                    <span style="position: absolute; top: 0.25rem; right: 5px; display: block;">
+                    <span class="edit-icon">
                         <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
                     </span>
                 </div>
