expenses css rules moved to global css file

--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -356,3 +356,36 @@ input.form-check-input {
 .invalid-feedback {
     display: block!important;
 }
+
+
+/*
+    Expenses
+*/
+.badge {
+    padding: 0.25rem .25rem;
+    color: #004085;
+}
+
+.drinks {
+    background-color: #d9d9d9;
+}
+
+.fees {
+    background-color: #ffdddd;
+}
+
+.food {
+    background-color: #c5d9f1;
+}
+
+.leisure {
+    background-color: #c4d79b;
+}
+
+.work {
+    background-color: #fff0c1;
+}
+
+table.stats tr > td.expense-ordinary {
+    padding-left:.55rem!important;
+}
