expenses list date th padding-left

--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -6,7 +6,7 @@
 <table class="table table-hover stats sticky-table">
     <thead class="thead-light">
         <tr class="top">
-            <th>Data</th>
+            <th class="expense-ordinary">Data</th>
             <th>Išlaidų rūšis</th>
             <th>Išlaidų pavadinimas</th>
             <th class="text-end">Kiekis</th>
