--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -13,6 +13,7 @@
         padding-left: .3rem!important;
         padding-right: .3rem!important;
         padding-bottom: 1rem!important;
+        background-color: white!important;
     }
 
     td.td_expand_day_expenses table.stats {
