--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -29,15 +29,15 @@
 <div class="row gx-2">
     <div class="col-lg-8">
         <div class="row my-2">
-            <div class="col-10">
+            <div class="col">
             {% for m in context_months %}
                 {% with m|date:'n' as m_num %}
-                <button id="{{m_num}}" type="button" data-url="{% url 'expenses:expenses_month_list' m_num %}" class="btn btn-sm btn-month js-filter me-1 {% if current_month|slugify == m_num %}btn-info{% endif %}">{{ m|date:'F'|title }}</button>
+                <button id="{{m_num}}" type="button" data-url="{% url 'expenses:expenses_month_list' m_num %}" class="btn btn-sm btn-month js-filter {% if current_month|slugify == m_num %}btn-info{% endif %}">{{ m|date:'F'|title }}</button>
                 {% endwith %}
                 {% endfor %}
                 <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}" class="btn btn-sm btn-month js-filter ms-2 {% if current_month|slugify == 13|slugify %}btn-info{% endif %}">Visi įrašai</button>
             </div>
-            <div class="col-2 text-end">
+            <div class="col-auto text-end">
                 <button type="button" id="insert_expense" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="bi bi-plus"></i>Išlaidas</button>
             </div>
         </div>
