--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -23,7 +23,7 @@
         <div class="row my-2">
             <div class="col" id="search_form_data">{{ search }}</div>
             <div class="col-auto text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create w5" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
             </div>
         </div>
         <div class="row">
