--- a/project/core/templates/core/includes/generic_delete_form.html
+++ b/project/core/templates/core/includes/generic_delete_form.html
@@ -2,16 +2,14 @@
     {% csrf_token %}
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
         <p class="py-0 my-4">Ar tikrai nori išrinti: <strong>{{ object }}</strong>?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-sm btn-danger" id="save_close">Delete</button>
-        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
     </div>
 </form>
 {% include 'core/includes/modal_form_js.html' %}
