--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -6,9 +6,7 @@
     <script src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
         {% if form.non_field_errors %}
@@ -60,7 +58,7 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
         {% if action != 'update' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">Save and Close</button>{% endif %}
-        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
     </div>
 </form>
 
