--- a/project/users/templates/users/users_base.html
+++ b/project/users/templates/users/users_base.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}
 
 {% block body %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-10 col-sm-12">
-            {% block content %}
 
-            {% endblock content %}
-        </div>
-    </div>
+<div class="container">
+    {% block content %}{% endblock content %}
 </div>
+
 {% endblock %}
