--- a/project/core/templates/core/includes/form.html
+++ b/project/core/templates/core/includes/form.html
@@ -1,23 +1,13 @@
 {% load crispy_forms_tags %}
 
 {% if form.non_field_errors %}
-<div class="alert alert-danger" role="alert">
-    {% for error in form.non_field_errors %}
-    <p {% if forloop.last %} class="mb-0" {% endif %}>{{ error }}</p>
-    {% endfor %}
+{% for error in form.non_field_errors %}
+<div class="alert alert-danger">
+    <strong>{{ error|escape }}</strong>
 </div>
+{% endfor %}
 {% endif %}
 
 {% for field in form %}
-<div class="form-group">
     {{ field|as_crispy_field }}
-    {% for error in field.errors %}
-
-    {% endfor %}
-    {% if field.help_text %}
-    <small class="form-text text-muted">
-        {{ field.help_text|safe }}
-    </small>
-    {% endif %}
-</div>
 {% endfor %}
