--- a/project/core/templates/core/includes/form.html
+++ b/project/core/templates/core/includes/form.html
@@ -1,12 +1,6 @@
 {% load crispy_forms_tags %}
 
-{% if form.non_field_errors %}
-{% for error in form.non_field_errors %}
-<div class="alert alert-danger">
-    <strong>{{ error|escape }}</strong>
-</div>
-{% endfor %}
-{% endif %}
+{% include 'core/includes/form_errors.html' %}
 
 {% for field in form %}
     {{ field|as_crispy_field }}
