--- a/project/core/templates/core/includes/generic_formset.html
+++ b/project/core/templates/core/includes/generic_formset.html
@@ -13,13 +13,7 @@
     </div>
     <div class="modal-body">
         {% for form in formset.forms %}
-        {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-        <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-        </div>
-        {% endfor %}
-        {% endif %}
+        {% include 'core/includes/form_errors.html' %}
 
         <div class="row gx-2">
             {% for field in form %}
