--- a/project/core/templates/core/includes/generic_formset.html
+++ b/project/core/templates/core/includes/generic_formset.html
@@ -3,9 +3,7 @@
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}"
     autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}">
     {% csrf_token %}
-
     {{ formset.management_form|crispy }}
-
 
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
@@ -23,11 +21,7 @@
         {% endfor %}
     </div>
 
-    <div class="modal-footer">
-        <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
-        {% if action != 'update' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">Save and Close</button>{% endif %}
-        <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
-    </div>
+    {% include 'core/includes/form_footer.html' %}
 </form>
 
 
