--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -9,13 +9,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-        <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-        </div>
-        {% endfor %}
-        {% endif %}
+        {% include 'core/includes/form_errors.html' %}
 
         <div class="form-group row">
             <label class="col-sm-3 col-form-label">Kopijuoti iš</label>
@@ -55,11 +49,7 @@
         </fieldset>
     </div>
 
-    <div class="modal-footer">
-        <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
-        {% if action != 'update' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">Save and Close</button>{% endif %}
-        <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
-    </div>
+    {% include 'core/includes/form_footer.html' %}
 </form>
 
 {% include 'core/includes/modal_form_js.html' %}
