--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -12,13 +12,13 @@
         {% include 'core/includes/form_errors.html' %}
 
         {% for field in form %}
-        <div class="row align-items-center">
-            <div class="col-sm-4 mb-3">{{ field.label_tag }}</div>
-            <div class="col-sm-8">
+        <div class="row">
+            <div class="col-4">{{ field.label_tag }}</div>
+            <div class="col-8">
             {% if field.html_name == 'total_sum' %}
             <div class="row gx-2">
-                <div class="col-sm">{{ field|as_crispy_field }}</div>
-                <div class="col-sm-2" id="div_sum_prices"><button type="button" id="add_price" class="btn btn-sm btn-secondary" style="width: 100%;">Add</button></div>
+                <div class="col">{{ field|as_crispy_field }}</div>
+                <div class="col-2" id="div_sum_prices"><button type="button" id="add_price" class="btn btn-sm btn-secondary" style="width: 100%;">Add</button></div>
             </div>
             {% else %}
             {{ field|as_crispy_field }}
