--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -1,4 +1,5 @@
 {% load static %}{% load crispy_forms_tags %}{% load form_field %}
+
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1">
     {% csrf_token %}
     <script src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
@@ -11,45 +12,14 @@
     <div class="modal-body">
         {% include 'core/includes/form_errors.html' %}
 
-        <div class="form-group row">
-            <label class="col-sm-3 col-form-label">Kopijuoti iš</label>
-            <div class="col-sm-9">{{ form.year_from|as_crispy_field }}</div>
+        {% for field in form %}
+        <div class="row gx-1 align-items-center my-2">
+            <div class="col-4">{{ field.label_tag }}</div>
+            <div class="col-8 align-items-center">{{ field|as_crispy_field }}</div>
         </div>
-        <div class="form-group row">
-            <label class="col-sm-3 col-form-label">Kopijuoti į</label>
-            <div class="col-sm-9">{{ form.year_to|as_crispy_field }}</div>
-        </div>
+        {% endfor %}
 
-        <fieldset class="form-group">
-            <div class="row">
-                <legend class="col-form-label col-sm-3 pt-0">Planai</legend>
-                <div class="col-sm-9">
-                    <div class="form-check">
-                            {% field form form.income 'form-check-input' %}
-                            <label class="form-check-label" for="id_income">Pajamų planus</label>
-                    </div>
-                    <div class="form-check">
-                            {% field form form.expense 'form-check-input' %}
-                            <label class="form-check-label" for="id_income">Išlaidų planus</label>
-                    </div>
-                    <div class="form-check">
-                            {% field form form.saving 'form-check-input' %}
-                            <label class="form-check-label" for="id_income">Taupymo planus</label>
-                    </div>
-                    <div class="form-check">
-                            {% field form form.day 'form-check-input' %}
-                            <label class="form-check-label" for="id_income">Dienos planus</label>
-                    </div>
-                    <div class="form-check">
-                            {% field form form.necessary 'form-check-input' %}
-                            <label class="form-check-label" for="id_income">Papildomų būtinų išlaidų planus</label>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-    </div>
-
-    {% include 'core/includes/form_footer.html' %}
+        {% include 'core/includes/form_footer.html' %}
 </form>
 
 {% include 'core/includes/modal_form_js.html' %}
