--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -4,14 +4,15 @@
 {% block head %}
 
 <style>
-    /* copy plans form styles */
-    .col-form-label {
-        padding-bottom: 0!important;
-        line-height: 1!important;
+    .invalid-feedback {
+        padding-top: .25rem;
+        padding-bottom: 0;
+        margin: 0;
+        background-color: aliceblue;
     }
 
-    .form-group {
-        margin-bottom: .35rem!important;
+    .mb-3 {
+        margin-bottom: 0!important;
     }
 </style>
 
