to display login form correctly on small screens

--- a/project/users/templates/users/users_base.html
+++ b/project/users/templates/users/users_base.html
@@ -3,7 +3,11 @@
 {% block body %}
 
 <div class="container">
-    {% block content %}{% endblock content %}
+    <div class="row w-100 align-items-center">
+        <div class="col-12">
+            {% block content %}{% endblock content %}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
