--- a/project/users/templates/users/login.html
+++ b/project/users/templates/users/login.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="card w-50 mx-auto my-auto">
+<div class="card my-auto">
     <div class="card-body">
         <form method="post" novalidate>
             {% csrf_token %}
