--- a/project/templates/modal_images.html
+++ b/project/templates/modal_images.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="imgModal" tabindex="-1" aria-labelledby="imgModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-body">
                 <div class="dspl text-center"></div>
