fixed css rules for current day highlight

--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -38,7 +38,7 @@
     }
 
     .table-danger.-full {
-        background-color: #fe536a;
+        --bs-table-accent-bg: #fe536a;
         font-weight: bold;
     }
 
